# dask_task_app

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
dask_task_app/: __init__.py  app.py  main.py  settings.py
dask_task_app/pages/: __init__.py  tasks_planner.py
dask_task_app/utils/: base_page.py  base_setting.py  cli.py
idea/: execution.md  planner.md  settings.yaml
tests/: test_cli.py  test_settings.py  test_tasks_planner.py
tests/data/tasks/: kitchen.md  shopping.md
